Bug 685191, don't fire an extra DOMMenuItemActive event when switching menus on a menubar, r=neil