layout/xul/base/src/nsMenuBarFrame.h
@@ -61,8 +61,11 @@ public:
 
 // Non-interface helpers
 
-  void
-  SetStayActive(bool aStayActive) { mStayActive = aStayActive; }
+  // The 'stay active' flag is set when navigating from one top-level menu
+  // to another, to prevent the menubar from deactivating and submenus from
+  // firing extra DOMMenuItemActive events.
+  bool GetStayActive() { return mStayActive; }
+  void SetStayActive(bool aStayActive) { mStayActive = aStayActive; }
 
   // Called when a menu on the menu bar is clicked on. Returns a menu if one
   // needs to be closed.
